Closed
Bug 380816
Opened 19 years ago
Closed 18 years ago
crash with print preview of ACID2 [@ nsCSSRendering::PaintBackgroundWithSC]
Categories
(Core :: Print Preview, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha8
People
(Reporter: Peter6, Assigned: MatsPalmgren_bugz)
References
()
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files, 2 obsolete files)
|
10.49 KB,
text/html
|
Details | |
|
8.54 KB,
patch
|
sharparrow1
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070515 Minefield/3.0a5pre ID:2007051514 [cairo]
repro:
open FF
open url
press print preview
scroll down in the preview to see the face
result:
Incident ID: 32176476
Stack Signature nsCSSRendering::PaintBackgroundWithSC 7b2ead5d
Product ID FirefoxTrunk
Build ID 2007051504
Trigger Time 2007-05-15 16:17:08.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module firefox.exe + (00265be0)
URL visited
User Comments crash with printpreview of ACID2 test
Since Last Crash 3190 sec
Total Uptime 3190 sec
Trigger Reason Access violation
Source File, Line No. e:\builds\tinderbox\fx-trunk\winnt_5.2_depend\mozilla\layout\base\nscssrendering.cpp, line 3385
Stack Trace
nsCSSRendering::PaintBackgroundWithSC [mozilla/layout/base/nscssrendering.cpp, line 3385]
Comment 1•19 years ago
|
||
I can reproduce this with print preview or printing on linux. It seems it's necessary to open File->Page Setup and select "Print background (color & images)". After that, display the URL and scroll down to see the face. The crash occurs when the row containing the eyes is supposed to scroll into view.
I get "###!!! ASSERTION: no viewport view: 'viewportView', file /extra/kherron/moz3/ffc/../mozilla/layout/base/nsCSSRendering.cpp, line 3379" just before the crash, and indeed it crashes because viewportView is null.
Updated•19 years ago
|
Flags: blocking1.9?
| Assignee | ||
Updated•19 years ago
|
Assignee: printing → mats.palmgren
Severity: normal → critical
Keywords: regression
OS: Windows XP → All
| Assignee | ||
Comment 2•19 years ago
|
||
| Assignee | ||
Updated•19 years ago
|
Flags: in-testsuite?
Comment 3•19 years ago
|
||
(In reply to comment #2)
> Created an attachment (id=264972) [details]
> wip
Oops :(.
This code should really be changed a bit, though. For one, we shouldn't need a view at all; the size of the root view is the same as that of the root frame. Secondly, the calculation of the origin for paginated contexts is wrong; we should be positioning relative to the PageContentFrame (which can be acccessed as the pageframe's first child), and we shouldn't be adjusting for scrollbars.
| Assignee | ||
Comment 4•19 years ago
|
||
Set the preference layout.scrollbar.side=1 for full effect.
Attachment #264972 -
Attachment is obsolete: true
| Assignee | ||
Comment 5•19 years ago
|
||
Attachment #265234 -
Flags: review?(sharparrow1)
| Assignee | ||
Comment 6•19 years ago
|
||
Comment on attachment 265234 [details] [diff] [review]
Patch rev. 2
wrong file..
Attachment #265234 -
Attachment is obsolete: true
Attachment #265234 -
Flags: review?(sharparrow1)
| Assignee | ||
Comment 7•19 years ago
|
||
Attachment #265247 -
Flags: review?(sharparrow1)
Updated•19 years ago
|
Attachment #265247 -
Flags: review?(sharparrow1) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #265247 -
Flags: superreview?(roc)
Flags: blocking1.9? → blocking1.9+
Comment 8•18 years ago
|
||
no crash on Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9a6pre) Gecko/20070612 Minefield/3.0a6pre ID:2007061212 [cairo], is this fixed on trunk now ?
| Reporter | ||
Comment 9•18 years ago
|
||
(In reply to comment #8)
> no crash on Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9a6pre)
> Gecko/20070612 Minefield/3.0a6pre ID:2007061212 [cairo], is this fixed on trunk
> now ?
>
No
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070612 Minefield/3.0a6pre ID:2007061213 [cairo]
Comment 10•18 years ago
|
||
roc, did you forget about this patch?
Comment on attachment 265247 [details] [diff] [review]
Patch rev. 2
Yes I did!
Attachment #265247 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 12•18 years ago
|
||
mozilla/layout/base/nsCSSRendering.cpp 3.320 mozilla/layout/base/nsLayoutUtils.h 3.58 mozilla/layout/base/nsLayoutUtils.cpp 3.104
-> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta1
| Reporter | ||
Comment 13•18 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007070400 Minefield/3.0a7pre ID:2007070400
VERIFIED
Status: RESOLVED → VERIFIED
Comment 14•18 years ago
|
||
This patch caused regression bug #402807. Could anyone take a look at it.
Updated•14 years ago
|
Crash Signature: [@ nsCSSRendering::PaintBackgroundWithSC]
You need to log in
before you can comment on or make changes to this bug.
Description
•