Make the viewport area that of the root frame, or in paginated contexts, the page content frame. b=380816 r=sharparrow1 sr=roc